# MiniCPM-o-Demo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  README_zh.md  docker-compose.yml  gateway.py  install.sh  lightning_start.sh  litserve_server.py  pyproject.toml  requirements.txt  requirements_litserve.txt  start_all.sh  worker.py
MiniCPMO45/: modeling_minicpmo.py
core/processors/: unified.py
docs/: audio-duplex-protocol.md  realtime-protocol-overview.md  realtime-protocol-schema.json  video-duplex-protocol.md
docs-app/: package.json
docs-app/app/: layout.tsx
docs-app/content/docs/en/: api.md  audio-duplex-protocol.md  index.md  meta.json  realtime-protocol-overview.md  video-duplex-protocol.md
docs-app/content/docs/en/api/: chat.md  duplex.md  half-duplex.md  meta.json
docs-app/content/docs/en/frontend/: index.md
docs-app/content/docs/en/realtime-api/: audio.md  examples.md  meta.json  overview.md  video.md
docs-app/content/docs/zh/: api.md  index.md  meta.json
docs-app/lib/: layout.shared.tsx
docs/en/: audio-duplex-protocol.md  realtime-protocol-overview.md  video-duplex-protocol.md
docs/site/en/: index.html
docs/site/zh/: index.html
examples/realtime/: README.md  audio_probe.py  video_probe.py
frontend/mobile/src/: App.tsx
gateway_modules/: worker_pool.py
static/: index.html  turnbased.html
static/audio-duplex/: audio_duplex.html
static/duplex/lib/: duplex-session.js  realtime-session.js
static/omni/: omni.html
static/realtime/: realtime-app.js  realtime.html
static/shared/: i18n.js
(+10 files in other folders)
