[project]
name = "minicpmo-demo"
version = "0.1.0"
description = "MiniCPM-o 4.5 Full-Duplex Demo with LitServe support"
authors = [
    {name = "MiniCPM-o Contributors"}
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "numpy>=1.24.0",
    "litserve>=0.2.16",
    "lightning>=2.0.0",
    "fastapi>=0.112",
    "uvicorn[standard]>=0.29.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# uv-specific configuration
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Optional: Use uv's Python management
# python = "3.11"